Reframe ROI as revenue potential, honest about costs

--- a/pitch-deck-v2.html
+++ b/pitch-deck-v2.html
@@ -506,34 +506,36 @@
   </div>
 </div>
 
-<!-- SLIDE 7: ROI -->
+<!-- SLIDE 7: REVENUE POTENTIAL -->
 <div class="slide slide-roi">
-  <h2>Projected <span>Return on Investment</span></h2>
+  <h2>Your Property's <span>Revenue Potential</span></h2>
+  <p style="text-align:center;opacity:0.7;margin-bottom:30px;max-width:600px;margin-left:auto;margin-right:auto;">Your guests already love Casa Chunan (5.0 ★). The issue isn't the property — it's visibility. Here's what comparable 3BR properties in SE Puerto Rico earn:</p>
   <div class="roi-bars">
     <div class="roi-bar">
       <div class="amount">$4,800</div>
       <div class="bar bar-current"></div>
-      <div class="label">Current<br>Annual</div>
+      <div class="label">Today<br>~$400/mo</div>
     </div>
     <div class="roi-bar">
-      <div class="amount">$6,720</div>
+      <div class="amount">$10,800</div>
       <div class="bar bar-conservative"></div>
-      <div class="label">Conservative<br>+40%</div>
+      <div class="label">Optimized<br>~$900/mo</div>
     </div>
     <div class="roi-bar">
-      <div class="amount">$8,160</div>
+      <div class="amount">$16,800</div>
       <div class="bar bar-moderate"></div>
-      <div class="label">Moderate<br>+70%</div>
+      <div class="label">+ Marketing<br>~$1,400/mo</div>
     </div>
     <div class="roi-bar">
-      <div class="amount">$10,560</div>
+      <div class="amount">$24,000</div>
       <div class="bar bar-aggressive"></div>
-      <div class="label">Aggressive<br>+120%</div>
+      <div class="label">Full Potential<br>~$2,000/mo</div>
     </div>
   </div>
+  <p style="text-align:center;font-size:0.8rem;opacity:0.5;margin-top:16px;">* Revenue before service costs. Even after the Starter package ($497/mo), you'd net significantly more than today.</p>
   <div class="roi-stats">
-    <div class="roi-stat"><div class="val">Month 3–4</div><div class="lbl">Break-even point</div></div>
-    <div class="roi-stat"><div class="val">117–159%</div><div class="lbl">Year 1 ROI</div></div>
+    <div class="roi-stat"><div class="val">$1,400–$2,000</div><div class="lbl">Monthly potential</div></div>
+    <div class="roi-stat"><div class="val">3–6 months</div><div class="lbl">To see results</div></div>
     <div class="roi-stat"><div class="val">+$5,760</div><div class="lbl">Max added revenue/year</div></div>
   </div>
 </div>
