Update pricing to Kimlee friends & family: $500 setup + $200/mo

--- a/pitch-deck-v2.html
+++ b/pitch-deck-v2.html
@@ -460,47 +460,21 @@
 <!-- SLIDE 6: PRICING -->
 <div class="slide slide-pricing">
   <h2>Investment</h2>
-  <div class="pricing-grid">
-    <div class="pkg-card">
-      <div class="tier">Starter</div>
-      <div class="setup">$997 <small>setup</small></div>
-      <div class="monthly">+ $497/month</div>
-      <ul>
-        <li>AI-optimized listing copy & title</li>
-        <li>AI review responses</li>
-        <li>Basic social media (4 posts/month)</li>
-        <li>Monthly performance snapshot</li>
-        <li>Photo ordering optimization</li>
-        <li>Month-to-month</li>
-      </ul>
-    </div>
+  <div class="pricing-grid" style="grid-template-columns: 1fr; max-width: 500px; margin: 0 auto;">
     <div class="pkg-card featured">
-      <div class="badge">Recommended</div>
-      <div class="tier">Growth</div>
-      <div class="setup">$2,500 <small>setup</small></div>
-      <div class="monthly">+ $997/month</div>
+      <div class="badge">Friends &amp; Family</div>
+      <div class="tier">Kimlee's Package</div>
+      <div class="setup">$500 <small>one-time setup</small></div>
+      <div class="monthly">+ $200/month</div>
       <ul>
-        <li>AI-optimized listing copy & title</li>
-        <li>Direct booking website</li>
-        <li>Social media (12 posts/month)</li>
+        <li>AI-optimized listing copy &amp; title</li>
+        <li>Direct booking website (live now!)</li>
+        <li>AI guest concierge voice agent</li>
+        <li>Social media content (12 posts/month)</li>
         <li>AI review responses</li>
-        <li>Basic SEO & Google Business</li>
+        <li>SEO &amp; Google Business setup</li>
         <li>Monthly performance reports</li>
-        <li>3-month minimum</li>
-      </ul>
-    </div>
-    <div class="pkg-card">
-      <div class="tier">Full Stack</div>
-      <div class="setup">$4,000 <small>setup</small></div>
-      <div class="monthly">+ $1,797/month</div>
-      <ul>
-        <li>Everything in Growth</li>
-        <li>Dynamic pricing engine</li>
-        <li>Email marketing</li>
-        <li>AI guest chatbot</li>
-        <li>Competitor monitoring</li>
-        <li>Paid ad management</li>
-        <li>Dedicated account manager</li>
+        <li>Month-to-month — cancel anytime</li>
       </ul>
     </div>
   </div>
@@ -532,7 +506,7 @@
       <div class="label">Full Potential<br>~$2,000/mo</div>
     </div>
   </div>
-  <p style="text-align:center;font-size:0.8rem;opacity:0.5;margin-top:16px;">* Revenue before service costs. Even after the Starter package ($497/mo), you'd net significantly more than today.</p>
+  <p style="text-align:center;font-size:0.8rem;opacity:0.5;margin-top:16px;">* Revenue before service costs. At just $200/mo, even modest booking increases pay for themselves many times over.</p>
   <div class="roi-stats">
     <div class="roi-stat"><div class="val">$1,400–$2,000</div><div class="lbl">Monthly potential</div></div>
     <div class="roi-stat"><div class="val">3–6 months</div><div class="lbl">To see results</div></div>
@@ -552,8 +526,8 @@
     </div>
     <div class="cta-step">
       <div class="num">2</div>
-      <h3>Choose a Package</h3>
-      <p>Growth recommended</p>
+      <h3>Review the Deal</h3>
+      <p>$500 + $200/mo</p>
     </div>
     <div class="cta-step">
       <div class="num">3</div>
